--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formix": "0.0.1",
     "prop-types": "^15.7.2",
     "qs": "^6.9.4",
+    "query-string": "^6.14.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
@@ -33,6 +34,7 @@
     "redux-promise-middleware": "^6.1.2",
     "redux-promise-middleware-actions": "^3.0.1",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^3.1.1",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
   },
